# cTools

./: CMakeLists.txt  README.md  _pubicHead.h  _public.cpp  _public.h  _publicConfig.h
.github/workflows/: cmake-single-platform.yml
demo/string_demo/: CMakeLists.txt  test1_deletelchr.cpp  test2_toupper.cpp  test3_replacestr.cpp
string_tools/: string_tools.cpp  string_tools.h
